게시글 추천api에 게시글순서 지켜서 return하기, cors설정